14479 SMB testoplock broken after 13515 Reviewed by: Jason King <jason.brian.king@gmail.com> Reviewed by: Matt Barden <mbarden@tintri.com> Approved by: Dan McDonald <danmcd@joyent.com>